versions/v4.2.0/doxygen/html/group__io__interfaces.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/group__io__interfaces.html
original_path: doxygen/html/group__io__interfaces.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Device Driver APIs

Device Driver APIs.
[More...](#details)

| Topics | |
| --- | --- |
|  | [1-Wire Interface](group__w1__interface.md) |
|  | 1-Wire Interface |
|  | [ADC driver APIs](group__adc__interface.md) |
|  | ADC driver APIs. |
|  | [Analog axis API](group__input__analog__axis.md) |
|  | Analog axis API. |
|  | [BBRAM Interface](group__bbram__interface.md) |
|  | BBRAM Interface. |
|  | [BBRAM emulator backend API](group__bbram__emulator__backend.md) |
|  | BBRAM emulator backend API. |
|  | [BC1.2 backed emulator APIs](group__b12__emulator__backend.md) |
|  | BC1.2 backend emulator APIs. |
|  | [BC1.2 driver APIs](group__b12__interface.md) |
|  | BC1.2 driver APIs. |
|  | [CAN Interface](group__can__interface.md) |
|  | CAN Interface. |
|  | [CAN Transceiver](group__can__transceiver.md) |
|  | CAN Transceiver Driver APIs. |
|  | [Cache Controller Interface](group__cache__arch__interface.md) |
|  | Cache Controller Interface. |
|  | [Cellular Interface](group__cellular__interface.md) |
|  | Cellular interface. |
|  | [Charger Interface](group__charger__interface.md) |
|  | Charger Interface. |
|  | [Clock Control Interface](group__clock__control__interface.md) |
|  | Clock Control Interface. |
|  | [Comparator Interface](group__comparator__interface.md) |
|  | Comparator Interface. |
|  | [Coredump pseudo-device driver APIs](group__coredump__device__interface.md) |
|  | Coredump pseudo-device driver APIs. |
|  | [Counter Interface](group__counter__interface.md) |
|  | Counter Interface. |
|  | [DAC driver APIs](group__dac__interface.md) |
|  | DAC driver APIs. |
|  | [DAI Interface](group__dai__interface.md) |
|  | DAI Interface. |
|  | [DMA Interface](group__dma__interface.md) |
|  | DMA Interface. |
|  | [Disk Driver Interface](group__disk__driver__interface.md) |
|  | Disk Driver Interface. |
|  | [Display Interface](group__display__interface.md) |
|  | Display Interface. |
|  | [EC Host Command Interface](group__ec__host__cmd__interface.md) |
|  | EC Host Command Interface. |
|  | [EDAC API](group__edac.md) |
|  | [EEPROM Interface](group__eeprom__interface.md) |
|  | EEPROM Interface. |
|  | [ESPI Driver APIs](group__espi__interface.md) |
|  | eSPI Driver APIs |
|  | [Entropy Interface](group__entropy__interface.md) |
|  | Entropy Interface. |
|  | [External Cache Controller Interface](group__cache__external__interface.md) |
|  | External Cache Controller Interface. |
|  | [FLASH Interface](group__flash__interface.md) |
|  | FLASH Interface. |
|  | [FLASH internal Interface](group__flash__internal__interface.md) |
|  | FLASH internal Interface. |
|  | [Fuel Gauge Interface](group__fuel__gauge__interface.md) |
|  | Fuel Gauge Interface. |
|  | [Fuel gauge backend emulator APIs](group__fuel__gauge__emulator__backend.md) |
|  | Fuel gauge backend emulator APIs. |
|  | [GNSS Interface](group__gnss__interface.md) |
|  | GNSS Interface. |
|  | [GPIO Driver APIs](group__gpio__interface.md) |
|  | GPIO Driver APIs. |
|  | [HW spinlock Interface](group__hwspinlock__interface.md) |
|  | HW spinlock Interface. |
|  | [Haptics Interface](group__haptics__interface.md) |
|  | Haptics Interface. |
|  | [Hardware Info Interface](group__hwinfo__interface.md) |
|  | Hardware Information Interface. |
|  | [I2C EEPROM Target Driver API](group__i2c__eeprom__target__api.md) |
|  | I2C EEPROM Target Driver API. |
|  | [I2C Interface](group__i2c__interface.md) |
|  | I2C Interface. |
|  | [I2S Interface](group__i2s__interface.md) |
|  | I2S (Inter-IC Sound) Interface. |
|  | [I3C Interface](group__i3c__interface.md) |
|  | I3C Interface. |
|  | [IPM Interface](group__ipm__interface.md) |
|  | IPM Interface. |
|  | [Input Interface](group__input__interface.md) |
|  | Input Interface. |
|  | [Inter-VM Shared Memory (ivshmem) reference API](group__ivshmem.md) |
|  | Inter-VM Shared Memory (ivshmem) reference API. |
|  | [Keyboard Matrix API](group__input__kbd__matrix.md) |
|  | Keyboard Matrix API. |
|  | [LED Interface](group__led__interface.md) |
|  | LED Interface. |
|  | [LED Strip Interface](group__led__strip__interface.md) |
|  | LED Strip Interface. |
|  | [LoRa APIs](group__lora__api.md) |
|  | [MBOX Interface](group__mbox__interface.md) |
|  | MBOX Interface. |
|  | [MDIO Interface](group__mdio__interface.md) |
|  | MDIO Interface. |
|  | [MIPI Display interface](group__mipi__interface.md) |
|  | MIPI Display definitions. |
|  | [MIPI-DBI driver APIs](group__mipi__dbi__interface.md) |
|  | MIPI-DBI driver APIs. |
|  | [MIPI-DSI driver APIs](group__mipi__dsi__interface.md) |
|  | MIPI-DSI driver APIs. |
|  | [MODBUS](group__modbus.md) |
|  | MODBUS transport protocol API. |
|  | [MSPI Devicetree related macros](group__mspi__devicetree.md) |
|  | MSPI Devicetree related macros. |
|  | [MSPI Driver APIs](group__mspi__interface.md) |
|  | MSPI Driver APIs. |
|  | [Miscellaneous Drivers APIs](group__misc__interfaces.md) |
|  | Miscellaneous Drivers APIs. |
|  | [Multi Function Device Drivers APIs](group__mfd__interfaces.md) |
|  | Multi Function Device Drivers APIs. |
|  | [PCI Express Controller Interface](group__pcie__controller__interface.md) |
|  | PCI Express Controller Interface. |
|  | [PCIe Host Interface](group__pcie__host__interface.md) |
|  | PCIe Host Interface. |
|  | [PECI Interface](group__peci__interface.md) |
|  | PECI Interface 3.0. |
|  | [PS/2 Driver APIs](group__ps2__interface.md) |
|  | PS/2 Driver APIs. |
|  | [PSI5 Interface](group__psi5__interface.md) |
|  | PSI5 Interface. |
|  | [PWM Interface](group__pwm__interface.md) |
|  | PWM Interface. |
|  | [Pin Controller Interface](group__pinctrl__interface.md) |
|  | Pin Controller Interface. |
|  | [RTC DS3231 Interface](group__rtc__ds3231__interface.md) |
|  | RTC DS3231 Driver-Specific API. |
|  | [RTC Interface](group__rtc__interface.md) |
|  | RTC Interface. |
|  | [Regulator Interface](group__regulator__interface.md) |
|  | Regulator Interface. |
|  | [Reset Controller Interface](group__reset__controller__interface.md) |
|  | Reset Controller Interface. |
|  | [Retained memory driver interface](group__retained__mem__interface.md) |
|  | Retained memory driver interface. |
|  | [SDHC interface](group__sdhc__interface.md) |
|  | SDHC interface. |
|  | [SENT Interface](group__sent__interface.md) |
|  | SENT Interface. |
|  | [SMBus Interface](group__smbus__interface.md) |
|  | SMBus Interface. |
|  | [SPI Interface](group__spi__interface.md) |
|  | SPI Interface. |
|  | [SYSCON Interface](group__syscon__interface.md) |
|  | SYSCON Interface. |
|  | [Sensor Interface](group__sensor__interface.md) |
|  | Sensor Interface. |
|  | [Sensor emulator backend API](group__sensor__emulator__backend.md) |
|  | Sensor emulator backend API. |
|  | [Stepper Driver Interface](group__stepper__interface.md) |
|  | Stepper Driver Interface. |
|  | [TEE Interface](group__tee__interface.md) |
|  | Trusted Execution Environment Interface. |
|  | [Text Display Interface](group__auxdisplay__interface.md) |
|  | Auxiliary (Text) Display Interface. |
|  | [Time-aware GPIO Interface](group__tgpio__interface.md) |
|  | Time-aware GPIO Interface. |
|  | [Touchscreen Event Report API](group__touch__events.md) |
|  | Touch Events API. |
|  | [UART Interface](group__uart__interface.md) |
|  | UART Interface. |
|  | [USB Power Delivery](group__usb__power__delivery.md) |
|  | USB Power Delivery. |
|  | [USB Type-C](group__usb__type__c.md) |
|  | USB Type-C. |
|  | [USB Type-C Port Controller API](group__usb__type__c__port__controller__api.md) |
|  | USB Type-C Port Controller API. |
|  | [USB device controller driver API](group__udc__api.md) |
|  | New USB device controller (UDC) driver API. |
|  | [USB host controller driver API](group__uhc__api.md) |
|  | USB host controller (UHC) driver API. |
|  | [USB-C VBUS API](group__usbc__vbus__api.md) |
|  | USB-C VBUS API. |
|  | [Video Controls](group__video__controls.md) |
|  | Video controls. |
|  | [Video Interface](group__video__interface.md) |
|  | Video Interface. |
|  | [Virtio Interface](group__virtio__interface.md) |
|  | Virtio Interface. |
|  | [Watchdog Interface](group__watchdog__interface.md) |
|  | Watchdog Interface. |

## Detailed Description

Device Driver APIs.

- Generated on  for Zephyr API Documentation by [![doxygen](doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
